--- a/SubEthaEdit-Mac/SubEthaPerf/Resources/SubEthaPerf-Info.plist
+++ b/SubEthaEdit-Mac/SubEthaPerf/Resources/SubEthaPerf-Info.plist
@@ -40,10 +40,12 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>${TCM_APP_REVISION}</string>
 	<key>NSMainNibFile</key>
 	<string>SEPMainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>CFBundleShortVersionString</key>
+	<string>${TCM_APP_VERSION}</string>
 </dict>
 </plist>
