[CHANGE] Enable code signing for all binaries in the app

--- a/BuildConfig/TCMAppConfig.xcconfig
+++ b/BuildConfig/TCMAppConfig.xcconfig
@@ -17,3 +17,5 @@ COMBINE_HIDPI_IMAGES = YES
 
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) CONFIGURATION_$(CONFIGURATION) $(TCM_APP_STYLE)
 SKIP_INSTALL = YES
+
+CODE_SIGN_IDENTITY = Mac Developer
