--- a/SubEthaEdit-Mac/SeeTextImporter/Info.plist
+++ b/SubEthaEdit-Mac/SeeTextImporter/Info.plist
@@ -24,11 +24,11 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>de.codingmonkeys.SeeTextImporter</string>
+	<string>de.codingmonkeys.SeeTextImporter${TCM_APP_STYLE}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>2.0</string>
 	<key>CFPlugInDynamicRegisterFunction</key>
 	<string></string>
 	<key>CFPlugInDynamicRegistration</key>
