--- a/SubEthaEdit-Mac/Unit Tests-Info.plist
+++ b/SubEthaEdit-Mac/Unit Tests-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>de.codingmonkeys.SubEthaEdit.UnitTests</string>
+	<string>de.codingmonkeys.SubEthaEdit${TCM_APP_STYLE}.UnitTests</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
