[CHANGE] doing basic folder document and fit all crashes related to second document type

--- a/SubEthaEdit-Mac/Info.plist
+++ b/SubEthaEdit-Mac/Info.plist
@@ -23,6 +23,22 @@
 			<string>PlainTextDocument</string>
 		</dict>
 		<dict>
+			<key>CFBundleTypeName</key>
+			<string>Any Directory</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.directory</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSDocumentClass</key>
+			<string>SEEFolderDocument</string>
+		</dict>
+		<dict>
 			<key>CFBundleTypeIconFile</key>
 			<string>SubEthaEditFiles.icns</string>
 			<key>CFBundleTypeName</key>
