--- a/SubEthaEdit-Mac/Info.plist
+++ b/SubEthaEdit-Mac/Info.plist
@@ -42,6 +42,24 @@
 			<key>CFBundleTypeIconFile</key>
 			<string>SubEthaEditFiles.icns</string>
 			<key>CFBundleTypeName</key>
+			<string>PlainTextType</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Alternate</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.plain-text</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSDocumentClass</key>
+			<string>PlainTextDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeIconFile</key>
+			<string>SubEthaEditFiles.icns</string>
+			<key>CFBundleTypeName</key>
 			<string>go Source File</string>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
@@ -143,24 +161,6 @@
 			</array>
 			<key>LSTypeIsPackage</key>
 			<false/>
-			<key>NSDocumentClass</key>
-			<string>PlainTextDocument</string>
-		</dict>
-		<dict>
-			<key>CFBundleTypeIconFile</key>
-			<string>seetext.icns</string>
-			<key>CFBundleTypeName</key>
-			<string>SEETextType</string>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>LSHandlerRank</key>
-			<string>Owner</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>de.codingmonkeys.subethaedit.seetext</string>
-			</array>
-			<key>LSTypeIsPackage</key>
-			<true/>
 			<key>NSDocumentClass</key>
 			<string>PlainTextDocument</string>
 		</dict>
@@ -888,24 +888,6 @@
 			<false/>
 			<key>NSDocumentClass</key>
 			<string>PlainTextDocument</string>
-		</dict>
-		<dict>
-			<key>CFBundleTypeIconFile</key>
-			<string>Mode.icns</string>
-			<key>CFBundleTypeName</key>
-			<string>mode Source File</string>
-			<key>CFBundleTypeRole</key>
-			<string>Viewer</string>
-			<key>LSHandlerRank</key>
-			<string>Owner</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>de.codingmonkeys.subethaedit.mode-source</string>
-			</array>
-			<key>LSTypeIsPackage</key>
-			<true/>
-			<key>NSDocumentClass</key>
-			<string></string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeIconFile</key>
@@ -1919,24 +1901,6 @@
 		</dict>
 		<dict>
 			<key>CFBundleTypeIconFile</key>
-			<string>style.icns</string>
-			<key>CFBundleTypeName</key>
-			<string>seestyle Source File</string>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>LSHandlerRank</key>
-			<string>Owner</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>de.codingmonkeys.subethaedit.seestyle-source</string>
-			</array>
-			<key>LSTypeIsPackage</key>
-			<false/>
-			<key>NSDocumentClass</key>
-			<string>PlainTextDocument</string>
-		</dict>
-		<dict>
-			<key>CFBundleTypeIconFile</key>
 			<string>SubEthaEditFiles.icns</string>
 			<key>CFBundleTypeName</key>
 			<string>m1s Source File</string>
@@ -1965,24 +1929,6 @@
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.xhtml</string>
-			</array>
-			<key>LSTypeIsPackage</key>
-			<false/>
-			<key>NSDocumentClass</key>
-			<string>PlainTextDocument</string>
-		</dict>
-		<dict>
-			<key>CFBundleTypeIconFile</key>
-			<string>SubEthaEditFiles.icns</string>
-			<key>CFBundleTypeName</key>
-			<string>text Source File</string>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>LSHandlerRank</key>
-			<string>Alternate</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>public.plain-text</string>
 			</array>
 			<key>LSTypeIsPackage</key>
 			<false/>
@@ -2279,6 +2225,60 @@
 			<key>NSDocumentClass</key>
 			<string>PlainTextDocument</string>
 		</dict>
+		<dict>
+			<key>CFBundleTypeIconFile</key>
+			<string>style.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>SubEthaEditSyntaxStyle</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>de.codingmonkeys.subethaedit.seestyle</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSDocumentClass</key>
+			<string>PlainTextDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeIconFile</key>
+			<string>Mode.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>SubEthaEditModeType</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>de.codingmonkeys.subethaedit.mode</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<true/>
+			<key>NSDocumentClass</key>
+			<string></string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeIconFile</key>
+			<string>seetext.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>SEETextType</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>de.codingmonkeys.subethaedit.seetext</string>
+			</array>
+			<key>LSTypeIsPackage</key>
+			<true/>
+			<key>NSDocumentClass</key>
+			<string>PlainTextDocument</string>
+		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
@@ -2500,14 +2500,14 @@
 				<string>public.source-code</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>seestyle Source File</string>
+			<string>SubEthaEditSyntaxStyle</string>
 			<key>UTTypeIdentifier</key>
-			<string>de.codingmonkeys.subethaedit.seestyle-source</string>
+			<string>de.codingmonkeys.subethaedit.seestyle</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string>seestyle</string>
+					<string>sss</string>
 				</array>
 			</dict>
 		</dict>
@@ -2627,23 +2627,6 @@
 				<key>public.filename-extension</key>
 				<array>
 					<string>sps</string>
-				</array>
-			</dict>
-		</dict>
-		<dict>
-			<key>UTTypeConformsTo</key>
-			<array>
-				<string>public.source-code</string>
-			</array>
-			<key>UTTypeDescription</key>
-			<string>mode Source File</string>
-			<key>UTTypeIdentifier</key>
-			<string>de.codingmonkeys.subethaedit.mode-source</string>
-			<key>UTTypeTagSpecification</key>
-			<dict>
-				<key>public.filename-extension</key>
-				<array>
-					<string>mode</string>
 				</array>
 			</dict>
 		</dict>
@@ -3381,24 +3364,6 @@
 		<dict>
 			<key>UTTypeConformsTo</key>
 			<array>
-				<string>com.apple.package</string>
-				<string>public.composite-content</string>
-			</array>
-			<key>UTTypeDescription</key>
-			<string>SEEText File</string>
-			<key>UTTypeIdentifier</key>
-			<string>de.codingmonkeys.subethaedit.seetext</string>
-			<key>UTTypeTagSpecification</key>
-			<dict>
-				<key>public.filename-extension</key>
-				<array>
-					<string>seetext</string>
-				</array>
-			</dict>
-		</dict>
-		<dict>
-			<key>UTTypeConformsTo</key>
-			<array>
 				<string>public.source-code</string>
 			</array>
 			<key>UTTypeDescription</key>
@@ -3699,6 +3664,42 @@
 				<key>public.filename-extension</key>
 				<array>
 					<string>sieve</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>com.apple.package</string>
+				<string>public.composite-content</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>SubEthaEditModeType</string>
+			<key>UTTypeIdentifier</key>
+			<string>de.codingmonkeys.subethaedit.mode</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>mode</string>
+				</array>
+			</dict>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>com.apple.package</string>
+				<string>public.composite-content</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>SEETextType</string>
+			<key>UTTypeIdentifier</key>
+			<string>de.codingmonkeys.subethaedit.seetext</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>seetext</string>
 				</array>
 			</dict>
 		</dict>
