--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,149 @@
-# Xcode
-build/*
-*.pbxuser
-!default.pbxuser
-*.mode?v3
-!default.mode?v3
-*.perspective
-*.perspectivev3
-!default.perspectivev3
-project.xcworkspace
-!default.xcworkspace
-xcuserdata
-profile
-*.moved-aside
-
-# osx noise
+#########################
+#
+# Michaels .gitignore file based on old ignores and the
+# .gitignore file for Xcode4 / OS X Source projects
+#
+# Version 2.0
+#    For latest version, see: http://stackoverflow.com/questions/49478/git-ignore-file-for-xcode-projects
+#
+# 2013 updates:
+#    - fixed the broken "save personal Schemes"
+#
+# NB: if you are storing "built" products, this WILL NOT WORK,
+#   and you should use a different .gitignore (or none at all)
+# This file is for SOURCE projects, where there are many extra
+#   files that we want to exclude
+#
+#########################
+ 
+#####
+# OS X temporary files that should never be committed
+ 
 .DS_Store
-*.ipa
 *.swp
-*~.nib
 profile
-*PhotoshopExport*
-*.scriptSuite
-*.scriptTerminology
+ 
+ 
+####
+# Xcode temporary files that should never be committed
+# 
+# NB: NIB/XIB files still exist even on Storyboard projects, so we want this...
+ 
+*~.nib
+ 
+ 
+####
+# Xcode build files -
+#
+# NB: slash on the end, so we only remove the FOLDER, not any files that were badly named "DerivedData"
+ 
+DerivedData/
+ 
+# NB: slash on the end, so we only remove the FOLDER, not any files that were badly named "build"
+ 
+build/
+ 
+ 
+#####
+# Xcode private settings (window sizes, bookmarks, breakpoints, custom executables, smart groups)
+#
+# This is complicated:
+#
+# SOMETIMES you need to put this file in version control.
+# Apple designed it poorly - if you use "custom executables", they are
+#  saved in this file.
+# 99% of projects do NOT use those, so they do NOT want to version control this file.
+#  ..but if you're in the 1%, comment out the line "*.pbxuser"
+ 
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+#    NB: also, whitelist the default ones, some projects need to use these
+!default.pbxuser
+!default.mode1v3
+!default.mode2v3
+!default.perspectivev3
+ 
+ 
+####
+# Xcode 4 - semi-personal settings
+#
+#
+# OPTION 1: ---------------------------------
+#     throw away ALL personal settings (including custom schemes!
+#     - unless they are "shared")
+#
+# NB: this is exclusive with OPTION 2 below
+xcuserdata
+ 
+# OPTION 2: ---------------------------------
+#     get rid of ALL personal settings, but KEEP SOME OF THEM
+#     - NB: you must manually uncomment the bits you want to keep
+#
+# NB: this is exclusive with OPTION 1 above
+#
+#xcuserdata/**/*
+ 
+#     (requires option 2 above): Personal Schemes
+#
+#!xcuserdata/**/xcschemes/*
+ 
+####
+# XCode 4 workspaces - more detailed
+#
+# Workspaces are important! They are a core feature of Xcode - don't exclude them :)
+#
+# Workspace layout is quite spammy. For reference:
+#
+# /(root)/
+#   /(project-name).xcodeproj/
+#     project.pbxproj
+#     /project.xcworkspace/
+#       contents.xcworkspacedata
+#       /xcuserdata/
+#         /(your name)/xcuserdatad/
+#           UserInterfaceState.xcuserstate
+#     /xcsshareddata/
+#       /xcschemes/
+#         (shared scheme name).xcscheme
+#     /xcuserdata/
+#       /(your name)/xcuserdatad/
+#         (private scheme).xcscheme
+#         xcschememanagement.plist
+#
+#
+
+project.xcworkspace
+
+####
+# Xcode 4 - Deprecated classes
+#
+# Allegedly, if you manually "deprecate" your classes, they get moved here.
+#
+# We're using source-control, so this is a "feature" that we do not want!
+ 
+*.moved-aside
+ 
+ 
+####
+# UNKNOWN: recommended by others, but I can't discover what these files are
+#
+# ...none. Everything is now explained.
+
+# other SCM systems
+.svn
+
+# editor temporary files 
+.*~
+*~
+*.swp
+
+# the oniguruma project builds its sources into srcroot
 SubEthaEdit-Mac/OgreKit/RegularExpression/oniguruma/intel
 SubEthaEdit-Mac/OgreKit/RegularExpression/oniguruma/universal
-SubEthaEdit-PantherScripting.r
 
+# needs to be removed once we update scripting definitions for the new release
+*.scriptSuite
+*.scriptTerminology
+*.r
