[CHANGE] converting all icns that need to be icns in the future into iconsets to support high res icons

--- a/SubEthaEdit-Mac/SeeTextImporter/Info.plist
+++ b/SubEthaEdit-Mac/SeeTextImporter/Info.plist
@@ -58,7 +58,7 @@
 			<key>UTTypeDescription</key>
 			<string>SubEthaEdit Text</string>
 			<key>UTTypeIconFile</key>
-			<string>seetext.icns</string>
+			<string>SubEthaEditText</string>
 			<key>UTTypeIdentifier</key>
 			<string>de.codingmonkeys.subethaedit.seetext</string>
 			<key>UTTypeTagSpecification</key>
