[ADD] ability to easily change languages in scheme

--- a/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/SubEthaEdit.xcscheme
+++ b/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/SubEthaEdit.xcscheme
@@ -85,6 +85,16 @@
             ReferencedContainer = "container:SubEthaEdit.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-AppleLanguages (&apos;en&apos;)"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-AppleLanguages (&apos;de&apos;)"
+            isEnabled = "NO">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
          <AdditionalOption
             key = "OBJC_PRINT_EXCEPTIONS"
