[CHANGE] Mode-Debug-Makefile: added comments;

--- a/SubEthaEdit-Mac/Documentation/ModeDebugHelper/Makefile
+++ b/SubEthaEdit-Mac/Documentation/ModeDebugHelper/Makefile
@@ -1,21 +1,25 @@
 #make file for style sheet creation and style extraction
 
 XSLTPROC=/usr/bin/xsltproc
+
+# XSLT that generates a sss file from all the used scopes + stlyes in a SyntakDefinition.xml
 XSLT=ModeScopeStyles.xslt
 
-
+# Languages for which to generate a .sss-file : additional languages have to be added by hand
 LANGUAGES=ActionScript AppleScript ASP-HTML Base bash C C++ CFML Conference CSS Diff ERB erlang go HTML Java Javascript JSP-HTML LassoScript-HTML LaTeX Lua Objective-C Objective-J Pascal Perl PHP-HTML Python Ruby SDEF SQL SVNLog Wiki XML LESS Sass Smarty YAML
 
 
+# Path from which to look for mode files
 #debug mode path
 MODEPATHPREFIX=/Users/Lisa/Desktop/Modes/
-
 #coda 2 modes
 #MODEPATHPREFIX=Coda2Modes/
-
 #MODEPATHPREFIX=../../Modes/
+
+#Path that leads to the SyntaxDefinition of a mode
 MODEPATHSUFFIX=.mode/Contents/Resources/SyntaxDefinition.xml
 
+#Paths to the Style Sheet location
 STYLEPATHPREFIX=ModeStyles/
 STYLEPATHSUFFIX=.sss
 
@@ -28,6 +32,7 @@ all: styles
 styles: $(STYLES)
 definitions: $(DEFINITONS)
 
+#generating a style sheet from a SyntaxDefinition.xml
 $(STYLEPATHPREFIX)%.sss: $(XSLT)
 	@ if [ -s $(MODEPATHPREFIX)$*$(MODEPATHSUFFIX) ]; then \
 		$(XSLTPROC) --novalid $(XSLT)  $(MODEPATHPREFIX)$*$(MODEPATHSUFFIX) > $(STYLEPATHPREFIX)$*.sss; \
@@ -41,10 +46,10 @@ $(STYLEPATHPREFIX)%.sss: $(XSLT)
 		echo "No Mode:\t\t$*"; \
 	fi
 	
-### init
+### init - make that directory
 init:
-	mkdir ModeStyles
+	mkdir $(STYLEPATHPREFIX)
 
-### cleanup
+### cleanup - delete all the style files
 clean:
 	rm $(STYLES) 
