[CHANGE] Makefile is now umbrella makefile that uses the other makefiles to do things, also contains helper calls (searching for scopes, etc.)

--- a/SubEthaEdit-Mac/Documentation/ModeDebugHelper/Makefile
+++ b/SubEthaEdit-Mac/Documentation/ModeDebugHelper/Makefile
@@ -1,92 +1,117 @@
-#make file for style sheet creation and style extraction
+#make file for style sheet creation and style extraction and scope renaming
+### Params
+## xsltproc
+## languages
+## mode_directory
+## result_mode_directory
+## mode_syntax_def_suffix
+## syntax_definition
+## style_directory
+## style_files
+## syntax_files
+## result_files
+## result_mode_mode_directory
+###
+## from
+## to
+## scope
+## mode
+###
 
-XSLTPROC=/usr/bin/xsltproc
+xsltproc=/usr/bin/xsltproc
 
-# XSLT that generates a sss file from all the used scopes + styles in a SyntaxDefinition.xml
-XSLT_STYLESHEET_FROM_MODE=StyleSheetForAllAttributes.xslt
+# languages for which to generate a .sss-file : additional languages have to be added by hand
+languages=ActionScript AppleScript ASP-HTML Base bash C C++ CFML Conference CSS Diff ERB erlang go HTML Java Javascript JSP-HTML LassoScript-HTML LaTeX Lua Objective-C Objective-J Pascal Perl PHP-HTML Python Ruby SDEF SQL SVNLog Wiki XML LESS Sass Smarty YAML
 
-# XSLT that generates a SyntaxDefinition.xml without the style attributes (color etc) from a SyntaxDefinition.xml
-XSLT_REMOVE_STYLEATTRIBUTES_FROM_MODE=RemoveStyleAttributes.xslt
+################################################################ Paths
 
-# Languages for which to generate a .sss-file : additional languages have to be added by hand
-LANGUAGES=ActionScript AppleScript ASP-HTML Base bash C C++ CFML Conference CSS Diff ERB erlang go HTML Java Javascript JSP-HTML LassoScript-HTML LaTeX Lua Objective-C Objective-J Pascal Perl PHP-HTML Python Ruby SDEF SQL SVNLog Wiki XML LESS Sass Smarty YAML
-
-
-# Path from which to look for mode files
+## Path from which to look for mode files
 #debug mode path
-MODE_PATH_PREFIX=/Users/Lisa/Desktop/Modes/
-#coda 2 modes
-#MODE_PATH_PREFIX=Coda2Modes/
-#MODE_PATH_PREFIX=../../Modes/
+mode_directory=../../Modes/
+#mode_directory=Coda2Modes/
+#mode_directory=ResultModes/
+#mode_directory=/Users/Lisa/Desktop/Modes/
 
-#Path that leads to the SyntaxDefinition of a mode
-MODE_PATH_SUFFIX=.mode/Contents/Resources/SyntaxDefinition.xml
+## Directory to store the resulting modes at
+result_mode_directory=ResultModes/
+#result_mode_directory=/Users/Lisa/Desktop/Modes/
 
-#Paths to the Style Sheet location
-STYLE_PATH_PREFIX=ModeStyles/
-STYLE_PATH_SUFFIX=.sss
+## Path that leads to the SyntaxDefinition of a mode
+mode_syntax_def_suffix=.mode/Contents/Resources/SyntaxDefinition.xml
 
-# Path to store the resulting modes at
-MODE_RESULT_PATH_PREFIX=ResultModes/
-MODE_RESULT_PATH_SUFFIX=.mode/Contents/Resources/SyntaxDefinition.xml
+## File name SyntaxDefinition
+syntax_definition="SyntaxDefinition.xml"
 
-STYLES=$(addprefix $(STYLE_PATH_PREFIX), $(addsuffix $(STYLE_PATH_SUFFIX), $(LANGUAGES)))
-DEFINITONS=$(addprefix $(MODE_PATH_PREFIX), $(addsuffix $(MODE_PATH_SUFFIX), $(LANGUAGES)))
-RESULTS=$(addprefix $(MODE_RESULT_PATH_PREFIX), $(addsuffix $(MODE_RESULT_PATH_SUFFIX), $(LANGUAGES)))
-RESULT_MODE_FOLDER=$(addprefix $(MODE_RESULT_PATH_PREFIX), $(addsuffix ".mode", $(LANGUAGES)))
+## Paths to the Style Sheet location
+style_directory=ModeStyles/
 
-all: stylesheader styles resultsheader results
+##
+style_files=$(addprefix $(style_directory), $(addsuffix .sss, $(languages)))
+syntax_files=$(addprefix $(mode_directory), $(addsuffix $(mode_syntax_def_suffix), $(languages)))
+result_files=$(addprefix $(result_mode_directory), $(addsuffix $(mode_syntax_def_suffix), $(languages)))
+result_mode_mode_directory=$(addprefix $(result_mode_directory), $(addsuffix ".mode", $(languages)))
 
-styles: $(STYLES)
-definitions: $(DEFINITONS)
-results: $(RESULTS)
+## Outside Parameter
+from=meta.default
+to=meta.default
+scope=language.subroutine
+mode=PHP-HTML
 
-stylesheader:
-	@ echo "########## generating style sheets from SyntaxDefinition.xmls";	
-	mkdir -p $(STYLE_PATH_PREFIX);
+################################################################ Startup
 
-resultsheader:
-	@ echo "########## generating style-less SyntaxDefinition.xmls";
+all: how-to
 
-#generating a style sheet from a SyntaxDefinition.xml
-$(STYLE_PATH_PREFIX)%.sss: $(XSLT_STYLESHEET_FROM_MODE)
-		@ if [ -s $(MODE_PATH_PREFIX)$*$(MODE_PATH_SUFFIX) ]; then \
-		$(XSLTPROC) --novalid $(XSLT_STYLESHEET_FROM_MODE)  $(MODE_PATH_PREFIX)$*$(MODE_PATH_SUFFIX) > $(STYLE_PATH_PREFIX)$*.sss; \
-		if [ -s $(STYLE_PATH_PREFIX)$*.sss ]; then \
-			echo "Created Style Sheet:\t$*"; \
-		else \
-			echo "No Style Sheet:\t\t$*"; \
-			rm $(STYLE_PATH_PREFIX)$*.sss; \
-		fi \
-	else \
-		echo "No Mode:\t\t$*"; \
-	fi
+how-to:
+	@ echo " HOW-TO - call with the options you want, this is an umbrella makefile for rename, remove-styles, create-style-sheet";
 
-#generating a style-less SyntaxDefinition.xml
-$(MODE_RESULT_PATH_PREFIX)%$(MODE_RESULT_PATH_SUFFIX): $(XSLT_REMOVE_STYLEATTRIBUTES_FROM_MODE)
-	@ if [ -s $(MODE_PATH_PREFIX)$*$(MODE_PATH_SUFFIX) ]; then \
-		mkdir -p "$$(dirname $(MODE_RESULT_PATH_PREFIX)$*$(MODE_RESULT_PATH_SUFFIX))"; \
-		$(XSLTPROC) --novalid $(XSLT_REMOVE_STYLEATTRIBUTES_FROM_MODE)  $(MODE_PATH_PREFIX)$*$(MODE_PATH_SUFFIX) > $(MODE_RESULT_PATH_PREFIX)$*$(MODE_RESULT_PATH_SUFFIX); \
-		echo "Created style-less SyntaxDefinition.xml:\t$*"; \
-	else \
-		echo "No Mode:\t\t$*"; \
-	fi	
-	
+################################################################ Real Recipes
 
-### cleanup - delete all the style files
+rename:
+	@ make -f make_rename.makefile from=$(from) to=$(to) syntax_files="$(syntax_files)" \
+	xsltproc=$(xsltproc) mode_directory=$(mode_directory) result_mode_directory=$(result_mode_directory) mode_syntax_def_suffix=$(mode_syntax_def_suffix)	
+
+remove-styles:
+	@ make -f make_remove-styles.makefile syntax_files="$(syntax_files)" result_files="$(result_files)" \
+	xsltproc=$(xsltproc) mode_directory=$(mode_directory) result_mode_directory=$(result_mode_directory) mode_syntax_def_suffix=$(mode_syntax_def_suffix)
+
+create-style-sheet:
+	@ make -f make_create-stylesheet.makefile style_files="$(style_files)" style_directory=$(style_directory) \
+	xsltproc=$(xsltproc) mode_directory=$(mode_directory) mode_syntax_def_suffix=$(mode_syntax_def_suffix)
+
+style-extraction: create-style-sheet remove-styles
+################################################################ Helper Recipes	
+
+### finding the use cases for one scope
+find-scope:
+	@ ( echo "<modes>"; find $(mode_directory) -name $(syntax_definition) -exec $(xsltproc) --param scope "'$(scope)'" --novalid XMLTagsForScope.xslt \{\} \;; echo "</modes>"; ) | see --mode xml;
+
+
+### finding all used scopes - one-mode version needs the mode as a param
+xslt_scope_in_mode=ScopesInMode.xslt
+
+all-scopes-one-mode:
+	@ xsltproc --novalid $(xslt_scope_in_mode) $(mode_directory)$(mode)$(mode_syntax_def_suffix) | see
+
+all-scopes-by-lang:
+	@ find $(mode_directory) -name $(syntax_definition) -exec $(xsltproc) --novalid $(xslt_scope_in_mode) \{\} \; | see
+
+all-scopes-uniqued:
+	@ find $(mode_directory) -name $(syntax_definition) -exec $(xsltproc) --novalid $(xslt_scope_in_mode) \{\} \; | awk '{print $$1}' | sort | uniq | see
+
+
+### cleanup - delete style and result files
 clean:
-	@ for file in $(STYLES); do \
+	@ for file in $(style_files); do \
 		if [ -f $$file ]; then \
 	    	rm $$file; \
 	    	echo "Removed file:\t$$file"; \
 		fi; \
 	done;
-	@ if [ $(MODE_RESULT_PATH_PREFIX) != $(MODE_PATH_PREFIX) ]; then \
-		for dir in $(RESULT_MODE_FOLDER); do \
+	@ if [ $(result_mode_directory) != $(mode_directory) ]; then \
+		for dir in $(result_mode_mode_directory); do \
 			if [ -d $$dir ]; then \
 		    	rm -rd $$dir; \
 		    	echo "Removed directory:\t$$dir"; \
 			fi; \
 		done; \
 	fi; \
-
