--- a/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/SubEthaEdit.xcscheme
+++ b/SubEthaEdit-Mac/SubEthaEdit.xcodeproj/xcshareddata/xcschemes/SubEthaEdit.xcscheme
@@ -87,6 +87,10 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "-NSShowAllViews YES"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "-AppleLanguages (&apos;en&apos;)"
             isEnabled = "NO">
          </CommandLineArgument>
